--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fibonacci numbers storage",
   "main": "./backend/index.js",
   "scripts": {
-    "start": "node ./backend/index.js",
+    "start": "webpack-dev-server --config webpack.dev.js & node ./backend/index",
     "lint": "eslint . --ext .js"
   },
   "husky": {
@@ -23,6 +23,14 @@
   },
   "homepage": "https://github.com/Ibadichan/fibonacci-storage#readme",
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.3",
+    "ejs-loader": "^0.3.6",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
@@ -31,20 +39,40 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
-    "prettier": "^2.0.5"
+    "mini-css-extract-plugin": "^0.9.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^2.0.5",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "autoprefixer": "^9.8.0",
+    "cssnano": "^4.1.10"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "classnames": "^2.2.6",
+    "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "history": "^4.10.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "request-ip": "^2.1.3",
     "sequelize": "^5.21.10",
-    "sequelize-cli": "^5.5.1"
-  }
+    "sequelize-cli": "^5.5.1",
+    "superagent": "^5.2.2"
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
