--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fibonacci-storage",
+  "name": "fibonacci-stories",
   "version": "1.0.0",
-  "description": "Fibonacci numbers storage",
+  "description": "Fibonacci stories",
   "main": "./backend/index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js & node ./backend/index",
@@ -14,22 +14,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ibadichan/fibonacci-storage.git"
+    "url": "git+https://github.com/Ibadichan/fibonacci-stories.git"
   },
   "author": "Ivan Badicean",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Ibadichan/fibonacci-storage/issues"
+    "url": "https://github.com/Ibadichan/fibonacci-stories/issues"
   },
-  "homepage": "https://github.com/Ibadichan/fibonacci-storage#readme",
+  "homepage": "https://github.com/Ibadichan/fibonacci-stories#readme",
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
+    "cssnano": "^4.1.10",
+    "dotenv-webpack": "^1.8.0",
     "ejs-loader": "^0.3.6",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -49,20 +52,24 @@
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "autoprefixer": "^9.8.0",
-    "cssnano": "^4.1.10"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "history": "^4.10.1",
+    "moment": "^2.26.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "prop-types": "^15.7.2",
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
