--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext .js"
   },
   "engines": {
-    "node": ">= 12.11.1"
+    "node": "12.11.1"
   },
   "husky": {
     "hooks": {
