--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./backend/index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js & node ./backend/index",
-    "build": "webpack --config webpack.prod.js",
+    "heroku-postbuild": "webpack --config webpack.prod.js",
     "lint": "eslint . --ext .js"
   },
   "engines": {
