--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@material-ui/styles": "^4.10.0",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
+    "compression": "^1.7.4",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "ejs": "^3.1.3",
