--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^4.0.0",
     "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
     "ejs-loader": "^0.3.6",
@@ -62,7 +63,6 @@
     "@material-ui/styles": "^4.10.0",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
-    "compression": "^1.7.4",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "ejs": "^3.1.3",
