--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "history": "^4.10.1",
